hphp/hack/test/typecheck/higher_kinded_types/hk_disabled/hk_parameter.php.exp
File "hk_parameter.php", line 3, characters 16-17:
`TC` is a type parameter. Type parameters cannot themselves have type parameters (Naming[2047])
File "hk_parameter.php", line 5, characters 11-12:
`TC` is a type parameter. Type parameters cannot themselves have type parameters (Naming[2047])
File "hk_parameter.php", line 7, characters 13-14:
`TC` is a type parameter. Type parameters cannot themselves have type parameters (Naming[2047])
File "hk_parameter.php", line 9, characters 14-15:
`TX` is a type parameter. Type parameters cannot themselves have type parameters (Naming[2047])
File "hk_parameter.php", line 11, characters 16-17:
`TC` is a type parameter. Type parameters cannot themselves have type parameters (Naming[2047])
