hphp/hack/test/typecheck/higher_kinded_types/hk_disabled/hk_parameter.php
<?hh

function test1<TC<TX>>() : void {}

class Foo<TC<TX>> {}

type MyType<TC<TX>> = int;

type MyType2<TX<TY>> = int;

type MyNewType<TC<TX>> = int;
